# LunaEngineBetaV2.0

./: .gitignore  CLAUDE-CODE-HANDOFF-ENABLE-LOCAL.md  CLAUDE-CODE-HANDOFF-LUNA-HUB-MCP.md  CLAUDE-CODE-HANDOFF-MCP-MEMORY-DIAGNOSTIC.md  CLAUDE-CODE-HANDOFF-PLANNING-LAYER.md  CLAUDE-CODE-HANDOFF.md  CLAUDE.md  HANDOFF_EMERGENT_PERSONALITY_TBD.md  HANDOFF_MEMORY_AND_INFERENCE_FIX.md  HANDOFF_PERSONA_STREAM_ROUTING.md  HANDOFF_PIPELINE_INTEGRATION.md  HANDOFF_UNIFIED_TURN_API.md  HANDOFF_VOICE_MEMORY_GAP.md  Luna Engine.app  STATUS-VS-BIBLE.md  WISHLIST_MEMORY_COHERENCE.md  forge_build.py  nuitka-crash-report.xml  pyproject.toml  run_luna.py  test_context.py  test_context2.py  verify_lunascript_files.py
Builds/Lunar-Forge/: Launch Forge.command  __init__.py  __main__.py  build.py  core.py  postbuild_clean_haiku.sh  pyproject.toml  sanitize_cli.py  sanitizer.py  serve.py  verify_build.py
Builds/Lunar-Forge/ForgeHandoffs/: HANDOFF_Build_Time_Estimator.md  HANDOFF_Forge_React_Frontend.md  HANDOFF_Nuitka_Exclude_Sympy.md  HANDOFF_Nuitka_Python_Discovery.md  HANDOFF_Plugin_Collections_Nexus.md  HANDOFF_Plugin_Skill_Architecture.md  HANDOFF_QA_Boot_Webview_Hang.md  HANDOFF_Tauri_Full_Build.md
Builds/Lunar-Forge/frontend/: index.html  package-lock.json  package.json  vite.config.js
Builds/Lunar-Forge/frontend/src/: App.jsx  api.js
Builds/Lunar-Forge/mcp/: __init__.py  __main__.py  server.py
Builds/Lunar-Forge/profiles/: clean.yaml  dev-test.yaml  hai-dai.yaml  luna-clean-haiku.yaml  luna-only.yaml  rosa-demo.yaml  tarcila.yaml
Builds/Lunar-Forge/sanitizer_templates/: testData-2.json
Builds/Lunar-Forge/seed/: create_seed_db.py
Builds/Lunar-Forge/templates/: aibrarian_registry.yaml  fallback_chain.yaml  llm_providers.json  personality.json  secrets.template.json
Builds/Lunar-Forge/tui/: __init__.py  __main__.py  app.py  build.tcss
Builds/Lunar-Forge/tui/panels/: __init__.py  build_log.py  manifest.py  profiles.py
Builds/Lunar-Forge/tui/themes/: __init__.py
Builds/Lunar-Forge/tui/widgets/: __init__.py  luna_orb.py  palette.py  pipeline_tracker.py
Tools/MemoryMatrix_SandBox/: CLAUDE-CODE-HANDOFF-QUEST-BOARD.md  CLAUDE-CODE-HANDOFF.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  ENTITY-INGESTER-HANDOFF.md  HANDOFF.md  QUEST-BOARD-HANDOFF.md  QUEST-BOARD-OBSERVATORY-HANDOFF.md  README.md  TRANSCRIPT-INGESTER-ARCHITECTURE-V2.md  bronze_extraction_progress.json  commit_sample_to_sandbox.py  debug_edge_mapping.py  debug_extraction.py  extraction_sample_results.json  http_standalone.py  ingester_inventory.json  ingester_triage_full.json  ingester_triage_full.yaml  ingester_triage_simulated.yaml  llm_triage_test_results.json  load_seed.py  mlx_test_result.json  pyproject.toml  quest_habit_v3.jsx  real_embeddings_test_results.json  reset_sandbox.py  resolver_test_results.json  run_bronze_batch.py  run_full_pipeline.py  run_full_triage.py  single_extraction_result.json  smoke_test.py  test_committer.py  test_extraction_sample.py  test_ingester_phase1.py  test_llm_triage.py  test_mlx_extraction.py  test_real_embeddings.py  test_resolver.py  (+1 more)
Tools/MemoryMatrix_SandBox/_CLAUDE_TRANSCRIPTS/: COMPLETE_EXPORT_INSTRUCTIONS.md  HANDOFF_COMPLETION.md  QUICK_START.md  README.md  conversation_uuids.json  export_conversations.js  extraction_summary.json  localStorage_dump.json  sessionStorage_dump.json
Tools/MemoryMatrix_SandBox/_design_reference/: README.md
Tools/MemoryMatrix_SandBox/frontend/: index.html  package-lock.json  package.json  vite.config.js
Tools/MemoryMatrix_SandBox/mcp_server/: __init__.py  activation.py  auto_cluster.py  clusters.py  config.py  embeddings.py  event_bus.py  layout.py  lock_in.py  maintenance.py  sandbox_matrix.py  schema.sql  search.py  server.py  tools.py
Tools/MemoryMatrix_SandBox/migrations/: 003_transcript_ingestion_log.sql
Tools/MemoryMatrix_SandBox/old/: TRANSCRIPT-INGESTER-ARCHITECTURE.md  TRANSCRIPT-INGESTER-HANDOFF.md
Tools/persona_forge/: CLAUDE_CODE_QUICKREF.md  HANDOFF_FORGE_MCP_INTEGRATION.md  HANDOFF_MCP_INGESTION_TOOLS.md  HANDOFF_PERSONA_FORGE_PERSONALITY_MONITORING.md  HANDOFF_PERSONA_FORGE_V1.md  INGESTION_PIPELINE_RUNBOOK.md  README.md  forge_cli.py  launch.py  launch_iterm.command  launch_mcp.sh  launch_tui.command  launch_tui.sh  open_tui.py  pyproject.toml
Tools/persona_forge/config/: default.toml  training_targets.json
Tools/persona_forge/docs/: HANDOFF_CLAUDE_CODE_FORGE_BUGFIXES.md  HANDOFF_CONVERSATION_INGESTION.md  HANDOFF_FORGE_MCP_BUGFIXES.md  HANDOFF_INTEGRATION_TEST_SUITE.md  REPORT_TRAINING_DATA_CLEANUP_2026-01-29.md
Tools/persona_forge/journals/: pushback.md
Tools/persona_forge/probes/: luna_identity.toml
Tools/persona_forge/profiles/: luna_v1.toml
Tools/persona_forge/scripts/: ingest_turns.py
Tools/persona_forge/tests/: __init__.py  test_integration.py
(+3304 files in other folders)
