[project]
name = "luna-engine"
version = "2.0.0"
description = "Luna's consciousness engine - uses LLMs the way game engines use GPUs"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "networkx>=3.2",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

memory = [
    "sqlite-vec>=0.1.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
]

local = [
    "mlx>=0.5.0",
    "mlx-lm>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luna"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
