[project]
name = "luna-engine"
version = "2.0.0"
description = "Luna's consciousness engine - uses LLMs the way game engines use GPUs"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "networkx>=3.2",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "numpy>=1.26.0",
    "sqlite-vec>=0.1.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

memory = [
    "networkx>=3.2",
]

providers = [
    "groq>=0.4.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
]

skills = [
    "markitdown>=0.1.0",
    "pypdf>=4.0.0",
    "sympy>=1.12",
]

local = [
    "mlx>=0.5.0",
    "mlx-lm>=0.0.10",
]

mcp = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

ci = [
    "groq>=0.4.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "markitdown>=0.1.0",
    "pypdf>=4.0.0",
    "sympy>=1.12",
    "mcp>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "nuitka>=2.0",
    "ordered-set>=4.1.0",
    "zstandard>=0.22.0",
    "textual>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luna"]

[project.scripts]
luna-debug = "luna.cli.debug:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
