[project]
name = "observatory-sandbox"
version = "0.1.0"
description = "Memory Matrix Observatory — sandboxed prototyping tool"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiosqlite>=0.19.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
