[project]
name = "persona-forge"
version = "1.0.0"
description = "Training data forge for personality LoRA fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ahab", email = "ahab@luna.engine"}
]

keywords = [
    "ai", "personality", "training-data", "lora", "fine-tuning",
    "voight-kampff", "character-creation"
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
forge = "persona_forge.cli:main"
forge-tui = "persona_forge.tui:run_tui"
forge-mcp = "persona_forge.mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
